improve timer handling of videos

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -137,8 +137,11 @@
           <property name="decimals">
            <number>1</number>
           </property>
+          <property name="maximum">
+           <double>9999.000000000000000</double>
+          </property>
           <property name="value">
-           <double>7.000000000000000</double>
+           <double>3.000000000000000</double>
           </property>
          </widget>
         </item>
