--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -31,7 +31,7 @@
      <number>0</number>
     </property>
     <item>
-     <widget class="MpvWidget" name="mpvWidget">
+     <widget class="Compositor" name="compositor">
       <property name="sizePolicy">
        <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
         <horstretch>0</horstretch>
@@ -154,9 +154,9 @@
  </widget>
  <customwidgets>
   <customwidget>
-   <class>MpvWidget</class>
+   <class>Compositor</class>
    <extends>QOpenGLWidget</extends>
-   <header>mpvwidget.h</header>
+   <header>compositor.h</header>
   </customwidget>
  </customwidgets>
  <resources/>
